--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-title">
-          <h2>About Us</h2>
+          <h2>Acerca de Nosotros</h2>
         </div>
 
         <div class="row content">
